start content div logic and data type additions started xmbcontent div component added overflow hidden to body to prevent scrolling when using arrow keys imported xmbcontent component but commented out for now started content div logic and data type additions

--- a/skeo-page-ps3/src/app/globals.css
+++ b/skeo-page-ps3/src/app/globals.css
@@ -54,6 +54,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body {
@@ -76,7 +77,7 @@ a {
 .XMB-container {
   position: relative;
   width: fit-content;
-  height: 60vh;
+  height: 100vh;
 
   margin-top: 25vh;
   margin-left: 30vw;
@@ -201,7 +202,7 @@ a {
   height: 500px;
   margin-left: 20vw;
   margin-top: 10vh;
-
+  /* 
   background-color: red;
-  background-image: url("/photosets/set2_hands/photo4_2.png");
+  background-image: url("/photosets/set2_hands/photo4_2.png"); */
 }
